// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ProfileUI Snapshot snapshot ProfileUI sesuai (modal terbuka) 1`] = `
<RCTSafeAreaView
  style={
    {
      "backgroundColor": "#FFF5E4",
      "flex": 1,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      {
        "flexGrow": 1,
      }
    }
    showsVerticalScrollIndicator={false}
    style={
      {
        "flex": 1,
      }
    }
  >
    <View>
      <Text>
        Profile
      </Text>
      <View
        style={
          {
            "backgroundColor": "#FFF5E4",
            "paddingBottom": 120,
            "paddingHorizontal": 24,
            "paddingTop": 20,
          }
        }
      >
        <Text>
          Budi Santoso
        </Text>
        <Text>
          Pecinta makanan pedas
        </Text>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
          testID="edit-profile-btn"
        >
          <Text>
            Edit Profile
          </Text>
        </View>
        <View>
          <Text>
            HEALTH & SAFETY
          </Text>
          <Text>
            Personalized safety filters are active for all mood-based recommendations.
          </Text>
          <Text>
            Tanpa Gluten
          </Text>
          <Text>
            Rendah Gula
          </Text>
        </View>
        <View>
          <Text>
            COMMON MOODS
          </Text>
          <Text>
            You frequently seek comfort foods during high-stress peaks.
          </Text>
          <Text>
            Stres
          </Text>
          <Text>
            Bahagia
          </Text>
        </View>
        <View
          style={
            {
              "marginBottom": 16,
              "marginTop": 8,
            }
          }
        >
          <Text
            style={
              {
                "color": "#351213",
                "fontFamily": "PlusJakartaSans-ExtraBold",
                "fontSize": 18,
              }
            }
          >
            Account Harmony
          </Text>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
          testID="menu-Personal Profile"
        >
          <Text>
            Personal Profile
          </Text>
          <Text>
            MANAGE YOUR BIO AND IDENTITY
          </Text>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
          testID="menu-Survey"
        >
          <Text>
            Survey
          </Text>
          <Text>
            REFINE YOUR ARTISANAL TASTE PALATE
          </Text>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
          testID="menu-History Preferences"
        >
          <Text>
            History Preferences
          </Text>
          <Text>
            REFINE YOUR ARTISANAL TASTE PALATE
          </Text>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "marginTop": 12,
              "opacity": 1,
              "paddingVertical": 12,
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#AA371C",
                  "fontSize": 20,
                },
                undefined,
                {
                  "fontFamily": "feather",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
          <Text
            style={
              {
                "color": "#AA371C",
                "fontFamily": "PlusJakartaSans-Bold",
                "fontSize": 14,
                "marginLeft": 10,
              }
            }
          >
            Sign Out of MoodBites
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <Modal
    animationType="fade"
    onRequestClose={[MockFunction]}
    transparent={true}
    visible={true}
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "rgba(0, 0, 0, 0.6)",
          "flex": 1,
          "justifyContent": "center",
          "paddingHorizontal": 30,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#fff",
            "borderRadius": 20,
            "elevation": 5,
            "padding": 24,
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.25,
            "shadowRadius": 3.84,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            {
              "color": "#351213",
              "fontFamily": "PlusJakartaSans-ExtraBold",
              "fontSize": 20,
              "marginBottom": 10,
            }
          }
        >
          Sign Out
        </Text>
        <Text
          style={
            {
              "color": "#4A2411",
              "fontFamily": "PlusJakartaSans-Regular",
              "fontSize": 14,
              "marginBottom": 24,
              "textAlign": "center",
            }
          }
        >
          Apakah kamu yakin ingin keluar dari MoodBites?
        </Text>
        <View
          style={
            {
              "flexDirection": "row",
              "justifyContent": "space-between",
              "width": "100%",
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#FFE3E1",
                "borderRadius": 12,
                "flex": 1,
                "marginRight": 8,
                "opacity": 1,
                "paddingVertical": 12,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#4A2411",
                  "fontFamily": "PlusJakartaSans-Bold",
                  "fontSize": 14,
                }
              }
            >
              Batal
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#FF6B6B",
                "borderRadius": 12,
                "flex": 1,
                "marginLeft": 8,
                "opacity": 1,
                "paddingVertical": 12,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#fff",
                  "fontFamily": "PlusJakartaSans-Bold",
                  "fontSize": 14,
                }
              }
            >
              Keluar
            </Text>
          </View>
        </View>
      </View>
    </View>
  </Modal>
  <Text>
    BottomNavBar
  </Text>
</RCTSafeAreaView>
`;

exports[`ProfileUI Snapshot snapshot ProfileUI sesuai (modal tertutup) 1`] = `
<RCTSafeAreaView
  style={
    {
      "backgroundColor": "#FFF5E4",
      "flex": 1,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      {
        "flexGrow": 1,
      }
    }
    showsVerticalScrollIndicator={false}
    style={
      {
        "flex": 1,
      }
    }
  >
    <View>
      <Text>
        Profile
      </Text>
      <View
        style={
          {
            "backgroundColor": "#FFF5E4",
            "paddingBottom": 120,
            "paddingHorizontal": 24,
            "paddingTop": 20,
          }
        }
      >
        <Text>
          Budi Santoso
        </Text>
        <Text>
          Pecinta makanan pedas
        </Text>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
          testID="edit-profile-btn"
        >
          <Text>
            Edit Profile
          </Text>
        </View>
        <View>
          <Text>
            HEALTH & SAFETY
          </Text>
          <Text>
            Personalized safety filters are active for all mood-based recommendations.
          </Text>
          <Text>
            Tanpa Gluten
          </Text>
          <Text>
            Rendah Gula
          </Text>
        </View>
        <View>
          <Text>
            COMMON MOODS
          </Text>
          <Text>
            You frequently seek comfort foods during high-stress peaks.
          </Text>
          <Text>
            Stres
          </Text>
          <Text>
            Bahagia
          </Text>
        </View>
        <View
          style={
            {
              "marginBottom": 16,
              "marginTop": 8,
            }
          }
        >
          <Text
            style={
              {
                "color": "#351213",
                "fontFamily": "PlusJakartaSans-ExtraBold",
                "fontSize": 18,
              }
            }
          >
            Account Harmony
          </Text>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
          testID="menu-Personal Profile"
        >
          <Text>
            Personal Profile
          </Text>
          <Text>
            MANAGE YOUR BIO AND IDENTITY
          </Text>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
          testID="menu-Survey"
        >
          <Text>
            Survey
          </Text>
          <Text>
            REFINE YOUR ARTISANAL TASTE PALATE
          </Text>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
          testID="menu-History Preferences"
        >
          <Text>
            History Preferences
          </Text>
          <Text>
            REFINE YOUR ARTISANAL TASTE PALATE
          </Text>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "marginTop": 12,
              "opacity": 1,
              "paddingVertical": 12,
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#AA371C",
                  "fontSize": 20,
                },
                undefined,
                {
                  "fontFamily": "feather",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
          <Text
            style={
              {
                "color": "#AA371C",
                "fontFamily": "PlusJakartaSans-Bold",
                "fontSize": 14,
                "marginLeft": 10,
              }
            }
          >
            Sign Out of MoodBites
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <Text>
    BottomNavBar
  </Text>
</RCTSafeAreaView>
`;
